config/kubernetes/theremins.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: theremins-nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: theremins-nginx
          image: nginx
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: theremins-http-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: theremins-http-server
  template:
    metadata:
      labels:
        app: theremins-http-server
    spec:
      containers:
        - name: theremins-http-server
          image: theremins-http-server:0.2.0
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: theremins-ws-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: theremins-ws-server
  template:
    metadata:
      labels:
        app: theremins-ws-server
    spec:
      containers:
        - name: theremins-ws-server
          image: theremins-ws-server:0.2.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: theremins-nginx
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: theremins-http-server
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: theremins-http-server
---
apiVersion: v1
kind: Service
metadata:
  name: theremins-ws-server
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: theremins-ws-server
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: theremins-ingress
spec:
  backend:
    serviceName: nginx
    servicePort: 80
  rules:
    - host: theremins.club
      http:
        paths:
          - backend:
              serviceName: theremins-http-server
              servicePort: 80
    - host: ws.theremins.club
      http:
        paths:
          - backend:
              serviceName: theremins-ws-server
              servicePort: 80
